tests/NormalTests/paczka2/big_fuzzy/20947396.err
Error in line 2: LBQ7uuRA S266 73,9
Error in line 11: Nn7m S74 38,8
Error in line 1: A669 A669 71,6
Error in line 18: 7R0 A669 70,25
Error in line 20: jzSk51hAiDL S266 39,4
Error in line 25: A669 S266 29,2
Error in line 29: A669 A669 69,1
Error in line 31: jzSk51hAiDL S552 13,3
Error in line 33: 7R0 S266 8,0
Error in line 46: 7R0 S74 82,0
Error in line 40: A669 S266 35,4
Error in line 50: A669 A669 23,5
Error in line 47: 7R0 S266 93,5
Error in line 52: 7R0 S552 400,8
Error in line 51: A669 S552 56,1
Error in line 70: LBQ7uuRA S266 19,9
Error in line 68: XRx6V2K4z S74 85,5
Error in line 77: eloIo S74 26,5
Error in line 85: eloIo S266 81,3
Error in line 90: jzSk51hAiDL S552 25,6
Error in line 91: XRx6V2K4z S266 14,5
Error in line 89: 7R0 A669 35,6
Error in line 92: jzSk51hAiDL S266 91,8
Error in line 99: jzSk51hAiDL A669 98,9
Error in line 101: A669 S74 55,1
Error in line 111: LBQ7uuRA A669 67,9
Error in line 110: Nn7m A669 47,8
Error in line 115: Nn7m S552 22,1
Error in line 124: LBQ7uuRA S266 89,6
Error in line 125: LBQ7uuRA S74 44,3
Error in line 127: Nn7m A669 6,6
Error in line 132: Nn7m S552 51,9
Error in line 128: LBQ7uuRA S266 81,8
Error in line 138: LBQ7uuRA S74 15,0
Error in line 109: 7R0 S552 22,4
Error in line 142: 7R0 S266 95,6
Error in line 131: XRx6V2K4z S266 144,3
Error in line 150: 7R0 S74 76,3
Error in line 151: XRx6V2K4z S552 67,2
Error in line 157: A669 S266 7,8
Error in line 193: jzSk51hAiDL S266 09,9
Error in line 194: 7R0 S552 88,0
Error in line 199: LBQ7uuRA A669 77,6
Error in line 190: XRx6V2K4z S552 12,9
Error in line 191: jzSk51hAiDL S266 29,7
Error in line 220: A669 S266 5,1
Error in line 228: 7R0 S74 93,0
Error in line 217: jzSk51hAiDL S266 59,4
Error in line 239: LBQ7uuRAbS552b4,3
Error in line 227: Nn7m S552 82,3
Error in line 242: Nn7m A669 46,6
Error in line 236: LBQ7uuRA S74 22,7
